# vampspy

./: .gitignore  0bugs  0hist  0install  0readme  0todo  0version  BUGS.md  BUILDING.md  CHANGELOG.md  Doxyfile  INSTALL.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
doc/: .tid  .tid.ilg  .tid.ind  Makefile  Makefile.in  casestud.aux  casestud.tex  execsum.aux  execsum.bbl  execsum.dvi  execsum.tex  ll.html  modeldes.aux  modeldes.tex  userg.aux  userg.tex  vamps.aux  vamps.bbl  (+9 more)
src/: 0files  0slname  Makefile  Makefile.in  configure  configure.in  vconfig.hin
src/agl/: Makefile  Makefile.in  agl.h  agl.h,v  agl_sl.c,v  greek.nfn  oldengl.nfn  tiny.nfn
src/deffile.lib/: 0readme  0todo  Makefile  Makefile.in  deffile.c  deffile.h  fgets.c  index.c  memlist.c  strcmp.c  test.c  test1.ini  test2.ini  test3.ini  varlist
src/deffile.lib/RCS/: deffile.c,v  deffile.h,v  fgets.c,v  index.c,v  memlist.c,v  sl_inter.c,v  strcmp.c,v  test.c,v
src/demo/: Makefile  config.status
src/include/: canopy.h  canopy.h,v  deffile.h,v  getopt.h  getopt.h,v  marquard.h  marquard.h,v  met.h  met.h,v  nrutil.h  nrutil.h,v  py_init.h  s_init.h,v  sl_icon.h,v  slfile.h,v  soil_api.h  soils.h  soils.h,v  swatsoil.h  swatsoil.h,v  ts.h,v  vamps.h  vamps.h,v  vamps_ext.h  version.h  version.h,v
src/main/: .plot.c.swp  0main.tex  0main.trf  0main.txt  Makefile  Makefile.in  init_py.c  plot.c  sigs.c  soil_api.c  vamps.c  vamps_ext.c
src/main/RCS/: fit.c,v  help.c,v  hist.c,v  init_s.c,v  intrins.c,v  misc.c,v  plot.c,v  scanf.c,v  sigs.c,v  tmplist.c,v  vamps.c,v  version.hdr,v
src/maq.lib/: #func.c#  0bugs  0readme  0todo  Makefile  Makefile.in  func.c  makefile.dos  marquard.c  memory.c  mex.c  strins.c
src/maq.lib/RCS/: func.c,v  marquard.c,v  marquard.h,v  memory.c,v  mex.c,v  new.maq.c,v  strins.c,v
src/met.lib/: Makefile  Makefile.in  e0.c  eaes.c  earo.c  gamma.c  int.c  lambda.c  makkink.c  penmon.c  ra.c  rn_open.c  vslope.c
src/met.lib/RCS/: e0.c,v  eaes.c,v  earo.c,v  gamma.c,v  int.c,v  lambda.c,v  makkink.c,v  met.h,v  penmon.c,v  ra.c,v  rn_open.c,v  sl_inter.c,v  vslope.c,v
src/mkfiles/: make.in  makefile.djg
src/nr_ut.lib/: 0files  0readme  Makefile  Makefile.in  log.c  nr_free.c  nr_mat.c  nr_rw.c  nr_stat.c  nr_test.c  nr_ut.c  nr_vec.c  nrutil.c
src/nr_ut.lib/RCS/: log.c,v  nr_free.c,v  nr_mat.c,v  nr_rw.c,v  nr_stat.c,v  nr_test.c,v  nr_ut.c,v  nr_vec.c,v  nrutil.c,v  nrutil.h,v
src/plot/: Makefile  Makefile.graph  Makefile.in  README  draw_frame.c  draw_frame.c,v  draw_graph.c  draw_graph.c,v  draw_histo.c  draw_histo.c,v  getinput.c  getinput.c,v  getopt.c  getopt.c,v  getrange.c  getrange.c,v  graph.c  graph.c,v  graph.h  graph.h,v  matrix.c  matrix.c,v  plot_sl.c,v  scale1.c  scale1.c,v  test.c  test.c,v  ts.h  ts.h,v  ts_time.c  ts_time.c,v
src/scripts/: mkdos.sh
src/soil/: 0soil.tex  0soil.trf  0soil.txt  Makefile  Makefile.in  alloc.c  array.c  band.c  calcgwl.c  det_hatm.c  filltab.c  fluxes.c  getparm.c  headcalc.c  integral.c  misc_p.c  nhc.c  nhcold.c  reduceva.c  rootex.c  setzero.c  smooth.c  soilboun.c  soilout.c  soilut.c  swatsoil.c  timestep.c
src/soil/RCS/: Makefile,v  alloc.c,v  array.c,v  band.c,v  calcgwl.c,v  det_hatm.c,v  evapotra.c,v  filltab.c,v  fluxes.c,v  getparm.c,v  headcalc.c,v  howsat.c,v  integral.c,v  misc_p.c,v  mpore.c,v  nhc.c,v  nhcold.c,v  pro_grou.c,v  reduceva.c,v  richard.c,v  rootex.c,v  setzero.c,v  smooth.c,v  soilboun.c,v  soilout.c,v  soils.c,v  soils.c.old,v  soilut.c,v  swatsoil.c,v  thet_cal.c,v  thet_it.c,v  timestep.c,v  vangenu.c,v
src/src/: Makefile  sysconf.h
src/topsys/: 0readme  0topsys.tex  0topsys.trf  0topsys.txt  Makefile  Makefile.in  canopy.c  intopsys.c  notree.c  pre_can.c  topout.c  topsys.h
src/topsys/RCS/: 0readme,v  canopy.c,v  fullcan.c,v  intopsys.c,v  metut.c,v  metut.h,v  notree.c,v  potevap.c,v  pre_can.c,v  script.c,v  topout.c,v  topsys.h,v
src/ts.lib/: Makefile  Makefile.in  ts.h  ts_com.c  ts_input.c  ts_mem.c  ts_readf.c  ts_spl.c  ts_time.c
src/ts.lib/RCS/: ts.h,v  ts_com.c,v  ts_input.c,v  ts_mem.c,v  ts_readf.c,v  ts_spl.c,v  ts_time.c,v
src/util/: 0util.tex  0util.trf  0util.txt  Makefile  Makefile.in  dataset.c  getopt.c  getstr.c  memory.c  mktable.c  output.c  perror.c  pro_mesg.c  progress.c  resamp.c  smoothar.c  utout.c  vsel.c  xtraout.c
src/util/RCS/: bsearch.c,v  dataset.c,v  getopt.c,v  getstr.c,v  interpol.c,v  issec.c,v  memory.c,v  mktable.c,v  myrk.c,v  output.c,v  perror.c,v  popen.c,v  pro_mesg.c,v  progress.c,v  resamp.c,v  smoothar.c,v  strins.c,v  utout.c,v  vrep.c,v  vsel.c,v  wrini.c,v  xtraout.c,v
(+183 files in other folders)
